Improved legal section

--- a/templates/legal/imprint.html
+++ b/templates/legal/imprint.html
@@ -7,6 +7,8 @@
         content="Offizielles Impressum von Kostmasters."
     />
     <title>Kotmasters | Impressum</title>
+    <link rel="shortcut icon" href="/icon.ico" />
+    <!-- <link rel="stylesheet" href="./stylesheet.css"> -->
 
 </head>
 <body>
