--- a/templates/legal/datenschutzerklaerung.html
+++ b/templates/legal/datenschutzerklaerung.html
@@ -1,8 +1,15 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datenschutzerklärung</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+        name="description"
+        content="Offizielle Datenschutzerklärung von Kostmasters."
+    />
+    <title>Kotmasters | Datenschutzerklärung</title>
+    <link rel="shortcut icon" href="/icon.ico" />
+    <!-- <link rel="stylesheet" href="./stylesheet.css"> -->
+
 </head>
 <body>
     <h1>Datenschutzerklärung</h1>
