--- a/templates/legal/imprint.html
+++ b/templates/legal/imprint.html
@@ -7,7 +7,7 @@
         content="Offizielles Impressum von Kostmasters."
     />
     <title>Kotmasters | Impressum</title>
-    <link rel="shortcut icon" href="/icon.ico" />
+    <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico" />
     <!-- <link rel="stylesheet" href="./stylesheet.css"> -->
 
 </head>
