--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
+
+
+/*Site_Settings*/
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   background-color: #24252A;
 }
+
+
+/* Header*/
 li, a, button {
   font-family: "Monserate", sans-serif;
   font-weight: 500;
@@ -51,9 +57,12 @@ button {
   background-color: rgba(0, 136, 169, 0.8);
 }
 
+
+/*Schriftfarbe*/
 p {
     color:white;
   }
+
 
 /* Social Media Icons */
 .fa {
@@ -65,6 +74,7 @@ p {
 .fa:hover {
   opacity: 0.4;
 }
+
 
 /* Footer */
 footer{
