added banner img in body
needs improvment to convert banner to an anctual banner looking thing yk? xD

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -64,6 +64,14 @@ p {
   }
 
 
+  /*banner.img*/
+.banner{
+  width: 1000px;
+  height: 250px;
+  object-fit: none;
+}
+
+
 /* Social Media Icons */
 .fa {
   padding: 20px;
