--- a/stylesheet.css
+++ b/stylesheet.css
@@ -92,6 +92,35 @@ h1 {
   opacity: 0.4;
 } */
 
+.short_summary {
+  align-items: center;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.short_summary__font {
+  font-size: 20px;
+}
+
+.short_summary img {
+  vertical-align: text-top;
+}
+
+.short_summary li{
+  display: inline-block;
+  align-items: center;
+  padding: 50px;
+}
+
+.short_summary li a{
+  transition: all 0.3s ease 0s;
+  padding: 70px 0;
+  padding-top: 20px;
+  padding-bottom: 100px;
+  padding-left: 20px;
+  vertical-align: middle;
+}
 
 /* Footer */
 footer{
