--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,6 +32,7 @@ header{
 
 .logo__font {
   font-size: 40px;
+  padding-left: 10px;
 }
 
 .nav__links{
@@ -45,6 +46,7 @@ header{
 
 .nav__links li a{
   transition: all 0.3s ease 0s;
+  font-size: 19.2px;
 }
 .nav__links li a:hover{
   color: #05ffff;
