--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,5 +8,8 @@
     />
     <title>Kotmasters | Aboutpage</title>
     <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico" />
-    <!-- <link rel="stylesheet" href="./stylesheet.css"> -->
+    <link rel="stylesheet" href="./stylesheet.css">
 </head>
+<body>
+    <p>huan</p>
+</body>
