--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,8 +8,13 @@
     />
     <title>Kotmasters | Aboutpage</title>
     <link rel="shortcut icon" href="https://staubtornado.github.io/kotmasters/icon.ico" />
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" href="https://staubtornado.github.io/kotmasters/stylesheet.css">
 </head>
+
+<header>
+    <h1 class="about_h1">Das sind wir</h1>
+</header>
+
 <body>
-    <p>huan</p>
+    <h2>Unsere Mitarbeiter</h2>
 </body>
