--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,8 +82,8 @@ p {
   color:white;
   font-family: 'Signika Negative';
   text-align: center;
-  padding-left: 500px;
-  padding-right: 500px;
+  padding-left: 20%;
+  padding-right: 20%;
   padding-top: 50px;
   padding-bottom: 20px;
   font-size: larger;
