--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,8 +82,8 @@ p {
   color:white;
   font-family: 'Signika Negative';
   text-align: center;
-   /* padding-left: 10%; */
- /* padding-right: 10%; */
+  padding-left: 5%;
+  padding-right: 5%;
   padding-top: 50px;
   padding-bottom: 20px;
   font-size: larger;
