--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,8 +82,8 @@ p {
   color:white;
   font-family: 'Signika Negative';
   text-align: center;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 20%;
+  padding-right: 20%;
   padding-top: 50px;
   padding-bottom: 20px;
   font-size: larger;
@@ -100,6 +100,12 @@ p {
   font-size: 19.2px;
   text-align: center;
   padding-bottom: 40px;
+}
+
+@media only screen and (max-width: 768px) {
+  .infotext {
+    width: 5%;
+  }
 }
 
 h1 {
