--- a/stylesheet.css
+++ b/stylesheet.css
@@ -120,23 +120,26 @@ h2 {
 
 
 .fa {
- 
-  padding: 20px;
+  
+  padding: 5px;
+  margin: 4px;
   font-size: 30px;
-  width: 60px;
+  width: 50px;
+  height: 50px;
   align-items: center;
   list-style: none;
   display: flex;
   justify-content: space-evenly;
 }
 .fa li a{
-  transition: all 0.5s ease 0s;
+  transition: all 0s ease 0,1s;
+
+
 
 }
 .fa li a:hover{
   color: #05ffff;
-  height: 50px;
-  width: 50px;
+  
   border-radius: 5px;
   box-shadow: -3px -3px 7px rgba(5, 255, 255, 1), 3px 3px 5px rgba(94, 104, 121, 0.288)
 
