Fixed logo in navigation bar changing position on legal pages, changed padding from 10% to 5%

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,8 +182,8 @@ footer{
   text-align: center;
   color: white;
   font-family: 'Signika Negative';
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .legal ul {
