--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,9 +32,12 @@ header{
 .logo__font {
   padding: 5px;
   border-radius: 5px;
-  box-shadow:-3px -3px 7px rgba(5, 255, 255, 1), 3px 3px 5px rgb(255, 255, 255);
+  
   font-size: 40px;
   padding-left: 10px;  
+}
+.logo__font:hover {
+  box-shadow:-3px -3px 7px rgba(5, 255, 255, 1), 3px 3px 5px rgb(255, 255, 255);
 }
 
 .nav__links{
