--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,8 @@ header{
   padding-left: 10px;  
 }
 .logo__font:hover {
-   transition: all 0.5s ease 0.5s;
+    opacity: 100;
+  transition: 500ms;
   box-shadow:-3px -3px 7px rgba(5, 255, 255, 1), 3px 3px 5px rgb(255, 255, 255);
 }
 
