--- a/sliders.css
+++ b/sliders.css
@@ -1,7 +1,7 @@
 .slider_body {
   margin: 0px;
   padding: 0px;
-  height: 100vh;
+  height: 650px;
   display: flex;
   justify-content: center;
   align-items: center;
