--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,8 @@ li, a, button {
   font-weight: 500;
   font-size: 16px;
   color: #edf0f1;
-  text-decoration: none; 
+  text-decoration: none;
+  padding: 5px;
 }
 header{
   display: flex;
