added css for text on about

--- a/about.css
+++ b/about.css
@@ -5,6 +5,13 @@
   padding-left: 100px;
 }
 
+.vorstellung{
+  color: white;
+  font-family: "Signika Negative";
+  text-align: center;
+  font-size: xx-large;;
+}
+
 .about_h {
   color: white;
   font-family: "Signika Negative";
