--- a/sliders.css
+++ b/sliders.css
@@ -37,6 +37,7 @@
   margin-top: -40px;
   display: flex;
   justify-content: center;
+  background-color: none;
 }
 .manual-btn {
   border: 2px solid #05ffff;
