--- a/contactButton.css
+++ b/contactButton.css
@@ -1,20 +1,17 @@
-:root {
-    --clr-neon: #AE6599;
-    --clr-bg: 	#34222D;
-  }
-  
 button {
-    padding: 9px 25px;
-    background-color: #b00b69;
-    text-shadow: 0 0 0.8125em
-    hsl(0 0% 100% / 0.3), 0 0 0.8125em currentColor;
-    box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);
-   
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  button:hover {
-    box-shadow: -3px -3px 7px rgb(255, 5, 234), 3px 3px 5px rgba(94, 104, 121, 0.288), inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon);  ;
-  }
-  
+  padding: 9px 25px;
+  background-color: #b00b69;
+  text-shadow: 0 0 0.8125em hsl(0 0% 100% / 0.3), 0 0 0.8125em currentColor;
+  box-shadow: inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
+
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  transition: all 0.3s ease 0s;
+  box-shadow: -3px -3px 7px rgb(255, 5, 234),
+    3px 3px 5px rgba(94, 104, 121, 0.288), inset 0 0 0.5em 0 #ae6599,
+    0 0 0.5em 0 #ae6599;
+}
