--- a/contactButton.css
+++ b/contactButton.css
@@ -15,3 +15,8 @@ button:hover {
     3px 3px 5px rgba(94, 104, 121, 0.288), inset 0 0 0.5em 0 #ae6599,
     0 0 0.5em 0 #ae6599;
 }
+@media (max-width: 768px) {
+  button {
+    transform: translate(-60%, 80px);
+  }
+}
