--- a/whitemode.css
+++ b/whitemode.css
@@ -1,1 +1,279 @@
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
 
+/*Site_Settings*/
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: #ffffff;
+}
+
+/* Header*/
+li, a, button {
+  font-family: 'Signika Negative';
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
+  text-decoration: none;
+  padding: 5px;
+}
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+  
+}
+.logo {
+  cursor: pointer;
+  width: 65px;
+  height: 40px;
+}
+
+.logo__font {
+  padding: 5px;
+  border-radius: 5px;
+  
+  font-size: 40px;
+  padding-left: 10px;  
+}
+.logo__font:hover {
+    opacity: 100;
+  transition: all 0.3s ease 0s;
+ box-shadow: -3px -3px 6px rgba(5, 255, 255, 1), 3px 3px 6px rgb(0, 0, 0)
+}
+
+.nav__links{
+  list-style: none;
+}
+
+.nav__links li{
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+.nav__links li a{
+  transition: all 0.3s ease 0s;
+  font-size: 19.2px;
+}
+.nav__links li a:hover{
+  color: #05ffff;
+  
+  border-radius: 5px;
+  box-shadow: -3px -3px 6px rgba(5, 255, 255, 1), 3px 3px 6px rgb(0, 0, 0)
+}
+
+/* Schriftfarbe */
+p {
+    color:white;
+    font-family: 'Signika Negative';
+  }
+
+.infotext {
+  color:white;
+  font-family: 'Signika Negative';
+  text-align: center;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  font-size: larger;
+}  
+.infotext a {
+  color:white;
+  font-family: 'Signika Negative';
+  font-size: 19.2px;
+}
+
+.infotext__unterschrift {
+  color:white;
+  font-family: 'Signika Negative';
+  font-size: 19.2px;
+  text-align: center;
+  padding-bottom: 40px;
+}
+/*
+@media only screen and (max-width: 768px) {
+  .infotext {
+    width: 5%;
+  }
+}
+*/
+h1 {
+  color:white;
+}
+
+h2 {
+  color:white;
+}
+
+/* Social Media Icons */
+.fa {
+  
+  padding: 5px;
+  margin: 4px;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  align-items: center;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+.fa li a{
+ transition: all 0.3s ease 0s;
+}
+.fa li a:hover{
+  color: #05ffff;
+  
+  border-radius: 5px;
+ box-shadow: -3px -3px 6px rgba(5, 255, 255, 1), 3px 3px 6px rgb(0, 0, 0)
+}
+
+.short_summary {
+  align-items: center;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.short_summary__font {
+  transition: all 0.5s ease 0s;
+  font-size: 20px;
+}
+
+.short_summary li img {
+  float: left;
+  margin-right: 10px;
+  clear:both;
+}
+
+.short_summary li{
+  display: inline-block;
+  align-items: center;
+  padding: 50px;
+}
+
+.short_summary li a{
+  margin-left: 0px;
+  overflow:auto;
+  display:block;
+}
+
+.short_summary li a br {
+  vertical-align: middle;
+}
+
+/* Footer */
+footer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+
+}
+
+/* Legal */
+.legal {
+  text-align: center;
+  color: white;
+  font-family: 'Signika Negative';
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.legal ul {
+  list-style: none;
+}
+
+.legal p {
+  padding-bottom: 10px;
+}
+
+.legal h2 {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+.legal li {
+  padding-bottom: 10px;
+}
+
+.legal h3 {
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+
+.legal h1 {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+@media (max-width: 768px) {
+  .infotext {
+    width: 100%;
+    text-align: center;
+  }
+  .infotext__unterschrift {
+    width: 100%;
+    text-align: center;
+  }
+  .logo {
+    width: auto;
+    flex-direction: column;
+    text-align: center;
+  }
+  .logo__font {
+    transform: translate(50px, 10%);
+    width: auto;
+    flex-direction: column;
+    text-align: center;
+  }
+  .short_summary {
+    width: 100%;
+  }
+  .short_summary__font {
+    width: auto;
+  }
+  .short_summary {
+    flex-direction: column;
+  }
+  .short_summary li a {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .short_summary li a img {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .short_summary__font {
+    transition: all 0.5s ease 0s;
+    font-size: 17px;
+  }
+
+  .short_summary li img {
+    float: left;
+    margin-right: 10px;
+    margin-left: 10px;
+    clear: both;
+  }
+
+  .short_summary li {
+    display: inline-block;
+    align-items: center;
+    padding: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .fa {
+    flex-direction: column;
+    margin-top: 10%;
+
+    transform: translate(-18px, 38px);
+  }
+  .nav__links {
+    font-size: 30px;
+    transform: translate(60px, 180px);
+    height: 70px;
+  }
+}
