--- a/contact.css
+++ b/contact.css
@@ -1,14 +1,6 @@
-.map {
-width: 60%;
-height: 40%;
-margin-left: 10%;
-position: relative;
-padding-bottom: 55%;
-padding-top: 30px;
-}
-
-.map iframe {
-position: absolute;
-width: 60%;
-height: 40%;
+.location_heading{
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-size: 40px;
 }
