--- a/projects.css
+++ b/projects.css
@@ -1,3 +1,13 @@
+.description {
+  font-family: 'Signika Negative';
+  padding-left: 5%;
+}
+
+.description a{
+  font-family: 'Signika Negative';
+  padding-left: 1%;
+}
+
 .short_summary {
     align-items: center;
     list-style: none;
@@ -5,77 +15,76 @@
     justify-content: space-evenly;
   }
   
-  .short_summary li img {
-    background-color: transparent;
-    width: 250px;
-    float: left;
-    margin-right: 10px;
-    clear:both;
-  }
-  
-  .short_summary li{
-    display: inline-block;
-    align-items: center;
-    margin: 5%;
-  }
+.short_summary li img {
+  background-color: transparent;
+  width: 250px;
+  float: left;
+  margin-right: 10px;
+  clear:both;
+}
 
-  .short_summary li:hover {
-    display: inline-block;
-    background-color: #2e32389f
-  }
-  
-  .short_summary li div{
-    background-color: transparent;
-    margin-left: 5%;
-    margin-bottom: 10px;
-    overflow:auto;
-    display:block;
-  }
-  
-  .short_summary li div div{
-    background-color: transparent;
-    font-size: small;
-    margin-bottom: 10px;
-    overflow:auto;
-    display:block;
-  }
-  
-  .short_summary li div h6{
-    background-color: transparent;
-    font-size: medium;
-    margin-left: 4%;
-    overflow:auto;
-    display:block;
-  }
+.short_summary li{
+  align-items: center;
+  margin-left: 7%;
+  margin-right: 7%;
+  margin-top: 2%;
+}
 
-  .short_summary li div h3{
-    background-color: transparent;
-  }
+.short_summary li:hover {
+  background-color: #2e32389f;
+  transition: background-color 200ms linear;
+  border-radius: 2%;
+}
 
-  .short_summary li div a{
-    background-color: transparent;
-  }
-  
-  .short_summary li div p{
-    background-color: transparent;
-    margin-top: 2%;
-    font-size: 19.2px;
-    margin-bottom: 10px;
-    overflow:auto;
-    display:block;
-  }
-  
-  .short_summary li div button{
-    margin-left: 5%;
-    margin-bottom: 10px;
-    overflow:auto;
-    display:block;
-    padding: 9px 25px;
-    background-color: #b00b69;
-    text-shadow: 0 0 0.8125em hsl(0 0% 100% / 0.3), 0 0 0.8125em currentColor;
-    box-shadow: inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
-  
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
+.short_summary li div{
+  background-color: transparent;
+  display:block;
+}
+
+.short_summary li div div{
+  background-color: transparent;
+  font-size: small;
+  margin-bottom: 10px;
+  overflow:auto;
+  display:block;
+}
+
+.short_summary li div h6{
+  background-color: transparent;
+  font-size: medium;
+  margin-left: 4%;
+  overflow:auto;
+  display:block;
+}
+
+.short_summary li div h3{
+  background-color: transparent;
+}
+
+.short_summary li div a{
+  background-color: transparent;
+}
+
+.short_summary li div p{
+  background-color: transparent;
+  margin-top: 2%;
+  font-size: 19.2px;
+  margin-bottom: 10px;
+  overflow:auto;
+  display:block;
+}
+
+.short_summary li div button{
+  margin-left: 5%;
+  margin-bottom: 10px;
+  overflow:auto;
+  display:block;
+  padding: 9px 25px;
+  background-color: #b00b69;
+  text-shadow: 0 0 0.8125em hsl(0 0% 100% / 0.3), 0 0 0.8125em currentColor;
+  box-shadow: inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
+
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
