--- a/projects.css
+++ b/projects.css
@@ -12,7 +12,7 @@
     align-items: center;
     list-style: none;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-between; */
   }
   
 .short_summary li img {
