--- a/styles/sendbutton.css
+++ b/styles/sendbutton.css
@@ -1,12 +1,13 @@
 .button {
-  position: relative;
+  position: center;
+  margin-left: 45%;
+  margin-right: 45%;
   display: block;
   width: 200px;
   height: 36px;
   border-radius: 18px;
-  background-color: #1c89ff;
+  background-color: #b00b69;
   border: solid 1px transparent;
-  color: #fff;
   font-size: 18px;
   font-weight: 300;
   cursor: pointer;
@@ -15,10 +16,10 @@
 }
 
 .button:hover {
-  background-color: transparent;
-  border-color: #fff;
-  -webkit-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  -webkit-box-shadow: -3px -3px 7px #ff05ea, 3px 3px 5px rgba(94, 104, 121, 0.288), inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
+          box-shadow: -3px -3px 7px #ff05ea, 3px 3px 5px rgba(94, 104, 121, 0.288), inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
 }
 
 .loader {
@@ -36,7 +37,7 @@
   background: transparent;
   margin: 30px auto 0 auto;
   border: solid 2px #424242;
-  border-top: solid 2px #1c89ff;
+  border-top: solid 2px #b00b69;
   border-radius: 50%;
   opacity: 0;
 }
@@ -66,7 +67,7 @@
   display: block;
   width: 10px;
   height: 2px;
-  background-color: #fff;
+  background-color: #19e356;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
 }
@@ -75,7 +76,7 @@
   display: block;
   width: 20px;
   height: 2px;
-  background-color: #fff;
+  background-color: #19e356;
   -webkit-transform: rotate(-45deg) translate3d(14px, -4px, 0);
           transform: rotate(-45deg) translate3d(14px, -4px, 0);
   -webkit-transform-origin: 100%;
@@ -83,8 +84,8 @@
 }
 
 .loader.active {
-  -webkit-animation: loading 2s ease-in-out;
-          animation: loading 2s ease-in-out;
+  -webkit-animation: loading 3s ease-in-out;
+          animation: loading 3s ease-in-out;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
 }
@@ -97,6 +98,7 @@
   transition: all 0.5s cubic-bezier(0.49, 1.74, 0.38, 1.74);
   -webkit-transition-delay: 0.2s;
           transition-delay: 0.2s;
+  background: transparent;
 }
 
 @-webkit-keyframes loading {
@@ -107,13 +109,13 @@
     opacity: 1;
     -webkit-transform: rotate(1080deg);
             transform: rotate(1080deg);
-    border-color: #262626;
+    border-color: transparent;
   }
   100% {
     opacity: 1;
     -webkit-transform: rotate(1080deg);
             transform: rotate(1080deg);
-    border-color: #1c89ff;
+    border-color: #19e356;
   }
 }
 
@@ -125,13 +127,13 @@
     opacity: 1;
     -webkit-transform: rotate(1080deg);
             transform: rotate(1080deg);
-    border-color: #262626;
+    border-color: transparent;
   }
   100% {
     opacity: 1;
     -webkit-transform: rotate(1080deg);
             transform: rotate(1080deg);
-    border-color: #1c89ff;
+    border-color: #19e356;
   }
 }
 /*# sourceMappingURL=sendbutton.css.map */
