--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,13 +10,24 @@ h1 {
   text-align: center;
 }
 
+fieldset {
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+  margin-right: 20%;
+  margin-left: 20%;
+  border-color: #5d5d5d;
+}
+
 input {
   font-size: 14px;
   font-family: "Signika Negative";
   color: white;
   outline: none;
   border: none;
-  width: 45%;
+  width: 100%;
   padding-left: 15px;
   margin-bottom: 14px;
   height: 44px;
@@ -28,7 +39,7 @@ textarea {
   color: white;
   outline: none;
   border: none;
-  width: 45%;
+  width: 100%;
   padding: 15px;
   height: 218px;
   margin-bottom: 14px;
