--- a/projects.css
+++ b/projects.css
@@ -71,17 +71,139 @@
   display:block;
 }
 
-.short_summary li div button{
-  margin-left: 5%;
-  margin-bottom: 10px;
-  overflow:auto;
-  display:block;
-  padding: 9px 25px;
-  background-color: #b00b69;
-  text-shadow: 0 0 0.8125em hsl(0 0% 100% / 0.3), 0 0 0.8125em currentColor;
-  box-shadow: inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
 
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+#music_bot {
+  align-items: center;
+  list-style: none;
+  display: flex;
+  transform: translate(45.5%, -102%);
+  /* justify-content: space-between; */
 }
+
+#music_bot li img {
+  background-color: transparent;
+  width: 250px;
+  float: left;
+  margin-right: 10px;
+  clear: both;
+}
+
+#music_bot li {
+  align-items: center;
+  margin-left: 7%;
+  margin-right: 53%;
+  margin-top: 2%;
+}
+
+#music_bot li:hover {
+  background-color: #2e32389f;
+  transition: background-color 200ms linear;
+  border-radius: 2%;
+}
+
+#music_bot li div {
+  background-color: transparent;
+  display: block;
+}
+
+#music_bot li div div {
+  background-color: transparent;
+  font-size: small;
+  margin-bottom: 10px;
+  overflow: auto;
+  display: block;
+}
+
+#music_bot li div h6 {
+  background-color: transparent;
+  font-size: medium;
+  margin-left: 4%;
+  overflow: auto;
+  display: block;
+}
+
+#music_bot li div h3 {
+  background-color: transparent;
+}
+
+#music_bot li div p {
+  background-color: transparent;
+  margin-top: 2%;
+  font-size: 19.2px;
+  margin-bottom: 10px;
+  overflow: auto;
+  display: block;
+}
+
+.description {
+  font-family: "Signika Negative";
+  padding-left: 5%;
+}
+
+.description a {
+  font-family: "Signika Negative";
+  padding-left: 1%;
+}
+
+#bgi_bot {
+  align-items: center;
+  list-style: none;
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+#bgi_bot li img {
+  background-color: transparent;
+  width: 250px;
+  float: left;
+  margin-right: 10px;
+  clear: both;
+}
+
+#bgi_bot li {
+  align-items: center;
+  margin-left: 7%;
+  margin-right: 56%;
+  margin-top: 2%;
+}
+
+#bgi_bot li:hover {
+  background-color: #2e32389f;
+  transition: background-color 200ms linear;
+  border-radius: 2%;
+}
+
+#bgi_bot li div {
+  background-color: transparent;
+  display: block;
+}
+
+#bgi_bot li div div {
+  background-color: transparent;
+  font-size: small;
+  margin-bottom: 10px;
+  overflow: auto;
+  display: block;
+}
+
+#bgi_bot li div h6 {
+  background-color: transparent;
+  font-size: medium;
+  margin-left: 4%;
+  overflow: auto;
+  display: block;
+}
+
+#bgi_bot li div h3 {
+  background-color: transparent;
+}
+
+#bgi_bot li div p {
+  background-color: transparent;
+  margin-top: 2%;
+  font-size: 19.2px;
+  margin-bottom: 10px;
+  overflow: auto;
+  display: block;
+}
+
