--- a/sliders.css
+++ b/sliders.css
@@ -37,7 +37,7 @@
   margin-top: -40px;
   display: flex;
   justify-content: center;
-  background-color: none;
+  background-color: transparent;
 }
 .manual-btn {
   border: 2px solid #05ffff;
