--- a/styles/scss/_contactButton.scss
+++ b/styles/scss/_contactButton.scss
@@ -1,7 +1,7 @@
 button {
   padding: 9px 25px;
   background-color: #b00b69;
-  text-shadow: 0 0 0.8125em hsl(0 0% 100% / 0.3), 0 0 0.8125em currentColor;
+  text-shadow: 0 0 0.8125em #ffffff4d, 0 0 0.8125em currentColor;
   box-shadow: inset 0 0 0.5em 0 #ae6599, 0 0 0.5em 0 #ae6599;
 
   border: none;
