--- a/styles/css/about.css
+++ b/styles/css/about.css
@@ -7,6 +7,7 @@
   background-color: #24252a;
   font-family: "Signika Negative";
   color: white;
+  text-decoration: none;
 }
 
 button {
@@ -112,6 +113,7 @@ header {
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   font-size: 19.2px;
+  padding: 5px;
 }
 
 .nav__links li a:hover {
@@ -156,7 +158,7 @@ header {
   transition: all 0.3s ease 0s;
 }
 
-.fa li ahover {
+.fa li a:hover {
   color: #05ffff;
   border-radius: 5px;
   -webkit-box-shadow: -3px -3px 6px #05ffff, 3px 3px 6px black;
