--- a/styles/scss/_socialmediaIcons.scss
+++ b/styles/scss/_socialmediaIcons.scss
@@ -22,9 +22,9 @@ $primary-color: #05ffff;
 
 .fa li a {
   transition: all 0.3s ease 0s;
-}
-.fa li a:hover {
-  color: $primary-color;
-  border-radius: 5px;
-  box-shadow: -3px -3px 6px $primary-color, 3px 3px 6px rgb(0, 0, 0);
+  &:hover {
+    color: $primary-color;
+    border-radius: 5px;
+    box-shadow: -3px -3px 6px $primary-color, 3px 3px 6px rgb(0, 0, 0);
+  }
 }
