--- a/styles/scss/_viewProjectButton.scss
+++ b/styles/scss/_viewProjectButton.scss
@@ -4,7 +4,7 @@
   background-color: #4a4b50;
   border-radius: 5px;
   transition: 0.5;
-  &hover {
+  &:hover {
     transition: 0.3s;
     background-color: #3f4044;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px,
