--- a/styles/scss/about.scss
+++ b/styles/scss/about.scss
@@ -63,3 +63,22 @@ $font-color: white;
   width: 100%;
   padding: 15px;
 }
+
+.card-order{
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  display: flex;
+  margin-top: 1%;
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+.card-order-2{
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  display: flex;
+  margin-top: 1%;
+  margin-bottom: 4%;
+}
