added delete x on contact formular
still needs improvement

--- a/styles/css/contact.css
+++ b/styles/css/contact.css
@@ -397,5 +397,17 @@ textarea {
   padding: 15px;
   height: 218px;
   margin-bottom: 14px;
+  resize: none;
+}
+
+#x {
+  width: 16px;
+  height: 16px;
+  margin-left: 97.7%;
+  margin-top: 0.1%;
+}
+
+#x:hover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=contact.css.map */
