--- a/styles/scss/contact.scss
+++ b/styles/scss/contact.scss
@@ -42,4 +42,15 @@ textarea {
   padding: 15px;
   height: 218px;
   margin-bottom: 14px;
+  resize: none;
+}
+
+#x{
+  width: 16px;
+  height: 16px;
+  margin-left: 97.7%;
+  margin-top: 0.1%;
+  &:hover{
+    cursor: pointer;
+  }
 }
