--- a/styles/scss/_cards.scss
+++ b/styles/scss/_cards.scss
@@ -63,6 +63,7 @@ $font-color:white;
   font-weight: 300;
   margin-bottom: 0;
   background: transparent;
+  text-align: center;
 }
 
 .profile-sidebar{
