--- a/styles/css/projects.css
+++ b/styles/css/projects.css
@@ -223,7 +223,7 @@ footer {
   background-color: #4a4b50;
   border-radius: 5px;
   -webkit-transition: 0.5;
-  transition: 0.5;
+  transition: 0.5s;
 }
 
 .viewProjecthover {
