--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -4,7 +4,7 @@
   .bottom_links li {
     margin-bottom: 30px;
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0 20px;
   }
 }
 
@@ -19,7 +19,6 @@ footer {
   list-style: none;
   flex-direction: column;
   text-align: center;
-  list-style: none;
   font-size: 30px;
   transform: translate(-30px, 0px);
   height: 70px;
@@ -27,7 +26,7 @@ footer {
 
 .bottom_links li {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0 20px;
 }
 
 .bottom_links li a {
