--- a/styles/scss/_slider.scss
+++ b/styles/scss/_slider.scss
@@ -1,8 +1,8 @@
 $primary-color: #05ffff;
 
 .slider_body {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   height: 500px;
   display: flex;
   justify-content: center;
