--- a/styles/scss/home.scss
+++ b/styles/scss/home.scss
@@ -18,10 +18,7 @@
 
 .infotext {
   text-align: center;
-  padding-left: 20%;
-  padding-right: 20%;
-  padding-top: 50px;
-  padding-bottom: 20px;
+  padding: 50px 20% 20px;
   font-size: larger;
 }
 .infotext a {
